# huffman-parallel

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh
.cache/clangd/index/: huffman.c.ED76D26ECA79E10B.idx  huffman.h.46BE730694EF4805.idx  minheap.c.BE581CAA00E0F314.idx  minheap.h.21AA23D990ADBF5D.idx  parallel_compression.c.76D41BE024C47504.idx  parallel_compression.h.88E32D47D8345BD0.idx  serial_compression.c.9ED355430F42ADA1.idx  serial_compression.h.D5D398220AD95590.idx
data/: lorem.txt  test.txt
include/: huffman.h  minheap.h  parallel_compression.h  serial_compression.h
src/: huffman  huffman.c  huffman.h  minheap  minheap.c  minheap.h  parallel_compression.c  serial_compression  serial_compression.c  serial_compression.h
